# optical-automation

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTE.rst  CONTRIBUTING.rst  LICENSE  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_style.txt  scdm_CI.bat  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_lumerical.yml  doc.yml  style.yml
Catia_base_scripts/: readme.md
Catia_base_scripts/AutomatedConversion/: Readme
Catia_base_scripts/Data_Prep_in_CAD/: readme
SCDM_scripts/Multi_Radiance_Sensor/: Multi radiance sensor_V2021r1.scscript  Multi_radiance_sensor_V2021r1.ipy
SCDM_scripts/Projection_Grid_Export/: ProjectionGridExport.py  Readme.txt
SPEOS_scripts/: Readme.md
SPEOS_scripts/ASP_start_Libary/: ASPcontrol.py  readme
SPEOS_scripts/SCLib/: scdm_api_import.py
SPEOS_scripts/SpaceClaimCore/: base.py
SPEOS_scripts/Vralabsexport/: modules.ipy  vrlabsexport.ipy
SPEOS_scripts/camera_sensor/: define_cameras.py
SPEOS_scripts/simulation_automation/: create_simulations.py
SPEOS_scripts/vralabs_export/: modules.ipy  vrlabs_export.ipy
_modules/: index.html
_sources/api/: modules.rst.txt  (+9 more)
_static/: README.md
api/: ansys_optical_automation.application.html  ansys_optical_automation.html  ansys_optical_automation.interop_process.html  ansys_optical_automation.lumerical_core.html  ansys_optical_automation.post_process.html  ansys_optical_automation.scdm_core.html  ansys_optical_automation.scdm_process.html  ansys_optical_automation.speos_process.html  ansys_optical_automation.zemax_process.html  modules.html
doc/: conf.py  index.rst
optical-automation/: __init__.py
resources/: CONTRIBUTE.html  install.html  license.html  overview.html
scdm_scripts/: readme.md
tests/: config.py  test_01_material_application.py  test_02_preprocessing_lib.py  test_03_speos_sensors.py  test_04_speos_simulations.py  test_05_simulation_automation.py  test_06_component_importer.py  test_07_VRLab_export.py  test_08_rayfile.py  test_09_xmp_viewer.py  test_101_lumerical_launch.py  test_10_stack_interop.py  test_11_brdf_viewer.py  test_12_anisotropicbsdf_viewer.py  test_12_coatingfile.py  test_13_anisotropicbsdf_viewer.py
unittests/: test_06_component_importer.py  test_camera_api.py  test_material_api.py  test_preprocessing_lib.py  test_simulation_api.py  test_simulation_automation.py
workflow_unittests/: test_01_material_application.py  test_02_preprocessing_lib.py  test_03_speos_sensors.py  test_04_speos_simulations.py  test_05_simulation_automation.py  test_06_LED_importer.py  test_07_VRLab_export.py  test_VRLab_export.py
(+254 files in other folders)
