[build-system]
requires = ["flit_core >=3.2,<4", ]
build-backend = "flit_core.buildapi"

# description of current module
[project]
name = "ansys_optical_automation"
authors = [
    {name = "Stefan Thoene", email = "stefan.thoene@ansys.com"},
    {name = "Pengyuan Lu", email = "pengyuan.lu@ansys.com"},
]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "pywin32; sys_platform=='win32'",
    "pythonnet",
    "numpy",
    "scipy",
    "comtypes",
    "opencv-python>=4.9.0"
]

# development dependencies
[project.optional-dependencies]
test = [
    "pytest",
    "pre-commit==2.15.0",
]

docs = [
    "sphinx",
    "sphinx-book-theme==0.4.0rc1",
    "sphinx-copybutton==0.5.1",
    "sphinx-panels",
    "numpydoc",
]

[project.urls]
Home = "https://github.com/ansys/optical-automation"

[tool.isort]
profile = "black"
